# rust-candle-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs  model.rs
