[package]
name = "rust-candle-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
tokenizers = "0.14.1"
anyhow = { version = "1", features = ["backtrace"] }
